gl33-master/src/test/deca/context/invalid/other/declaration_meme_nom_string_void.deca
// Invalid
// Déclaration des variables de même nom (string et void)


{
   String a;
   void a;
}
